--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="#">Our masters</a>
                     </li>
                     <li>
-                        <a href="#">Portfolio</a>
+                        <a href="./registratsiya/index.html">Registration</a>
                     </li>
                     <li>
                         <a href="#">Testimonials</a>
@@ -70,7 +70,7 @@
                 <div class="tp">
                     <h1>Men’s Barbershop <br> in The Middle East</h1>
                     <div>
-                        <button type="button">THE HIGHEST RATED</button>
+                        <button   type="button" >THE HIGHEST RATED</button>
                         <p>Text that is placed at the bottom <br> of the heading to reveal details</p>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
 
             </div>
         </div>
-        <div class="icons">
+        <div class="icons"><source>
             <ul>
                 <li>
                     <i class="icon icon-dom"></i>
