--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
                    <div class="right">
                     <div class="text">
-                        <p class="bir">8 (800) 000-00-00</p>
+                        <p class="bir"><a href="tel:+998994102328">+998994102328</a></p>
                         <p>Daily from 9 to 20</p>
                     </div>
                     <div class="dumaloq">
