--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./icon.css">
+    <link rel="stylesheet" href="./map.html">
 </head>
 <body>
           <!-- nav -->
@@ -39,7 +40,7 @@
                             302 W 50th St, <br> NY, NY 10019
                         </p>
                         <div class="dumaloq">
-                        <i class="icon icon-location"></i>
+                        <a href="./map.html"><i class="icon icon-location"></i></a>
 
 
                         </div>
@@ -47,11 +48,11 @@
                 </div>
                    <div class="right">
                     <div class="text">
-                        <p class="bir"><a href="tel:+998994102328">+998994102328</a></p>
+                        <p class="bir"><a href="tel:+998935099555">+998935099555</a></p>
                         <p>Daily from 9 to 20</p>
                     </div>
                     <div class="dumaloq">
-                    <i class="icon icon-tel"></i>
+                    <i class="icon icon-tel" ><a href="./map.html"></a></i>
 
 
                     </div>
