--- a/registratsiya/index.html
+++ b/registratsiya/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Barbershop</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../map.html">
   </head>
   <body>
     <section class="wrapper">
