--- a/about/index.html
+++ b/about/index.html
@@ -59,6 +59,9 @@
             <h1 class="bigh">Our craftsmen make visitors  beautiful and happier</h1>
             <p class="bigp">Text placed at the bottom of the title to reveal details</p>
         </div>
+        <div class="container_3">
+
+        </div>
     </main>
   </body>
 </html>
