--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
           <!-- nav -->
-    <nav>
+    <nav id="navbar">
         <div class="container">
             <div class="nav__content">
                 <div class="first">
-                    <i class="icon icon-barg"></i>
-                    <h1>Cool Barber</h1>
+                    <a href="#"><i class="icon icon-barg"></i></a>
+                    <a href="#"><h1>Cool Barber</h1></a>
                 </div>
                 <ul class="ahref">
                     <li>
@@ -36,9 +36,9 @@
                     </li>
                 </ul>
                     <div class="left">
-                        <p>
-                            302 W 50th St, <br> NY, NY 10019
-                        </p>
+                       <a href="./map.html"> <p>
+                        302 W 50th St, <br> NY, NY 10019
+                    </p></a>
                         <div class="dumaloq">
                         <a href="./map.html"><i class="icon icon-location"></i></a>
 
@@ -48,11 +48,11 @@
                 </div>
                    <div class="right">
                     <div class="text">
-                        <p class="bir"><a href="tel:+998935099555">+998935099555</a></p>
+                        <p class="bir"><a href="tel:+998994102328">+998994102328</a></p>
                         <p>Daily from 9 to 20</p>
                     </div>
                     <div class="dumaloq">
-                    <i class="icon icon-tel" ><a href="./map.html"></a></i>
+                    <a href="tel:+998994102328"><i class="icon icon-tel" ></i></a>
 
 
                     </div>
@@ -64,7 +64,7 @@
         </div>
     </nav>
             <!-- main -->
-<main>
+<main id="main">
     <div class="container">
         <div class="main__content">
             <div class="top">
