--- a/map.html
+++ b/map.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./icon.css">
 </head>
 <body>
+     <!-- nav -->
     <nav>
         <div class="container">
             <div class="nav__content">
@@ -50,7 +51,8 @@
                         <p>Daily from 9 to 20</p>
                     </div>
                     <div class="dumaloq">
-                    <i class="icon icon-tel" ><a href="#"></a></i>
+                        <a href="tel:+998994102328"><i class="icon icon-tel" ></i></a>
+
 
 
                     </div>
@@ -61,13 +63,37 @@
             </div>
         </div>
     </nav>
+         <!-- map -->
     <div class="map">
         <div class="container">
-           <ul class="black">
-            <li>
+           <div class="block">
+            <h1>Contacts</h1>
+            <div class="white">
+                <div class="circle">
+                <i class="icon icon-tel vb"></i>
+                </div>
+                <a href="tel:+998935099555">+998935099555</a>
+            </div>
+            <div class="white">
+                <div class="circle">
+                    <i class="icon icon-xat xt"></i>
+                    </div>
+                <input type="email" placeholder="email">
+            </div>
+            <div class="white">
+                <div class="circle">
+                    <i class="icon icon-location lt"></i>
+                    </div>
+                <p>302 W 50th St, NY, NY 10019</p>
+            </div>
+            <div class="white">
+                <div class="circle">
+                    <i class="icon icon-soat st"></i>
+                    </div>
+                    <p>Daily from 9 to 20</p>
+            </div>
 
-            </li>
-           </ul>
+           </div>
         </div>
 
     </div>
